# SDLab_Noelia

./: Manual.md  Manual_de_Instrucciones.md  README.md  pyproject.toml
.github/workflows/: lintian.yml
client_testing/: UIclient.py  basic_client.py  client.py  file.json  file2.json
config/: authentication.config  client.config  icestorm.config
icedrive_authentication/: app.py  app2.py  autentificator.py  authentication.py  client.py  delayed_response.py  discovery.py  persistence.py  persistencia.py  pruebas.json  user.py
pruebas_cliente/: CLIENTE.py  client.py  pruebas.json
pruebas_unitarias/: pruebas.json  test_persistencia.py  test_user.py
unit_testing/: persistence_test.py  user_test.py
